src/objects/NAMAttachmentConversionStatus__c.object
<CustomObject>
    <fields>
        <fullName>JobId__c</fullName>
        <label>JobId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <description>The object name we are migrating. This is useful for bulk migration. It make no sense in single migration</description>
        <externalId>true</externalId>
        <label>ObjectName</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Amount of attachments to migrate, input by the user</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <description>The record id that we are migrating. It is used for single migration. If null then we are in a bulk migration context.</description>
        <externalId>true</externalId>
        <label>RecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Used to check what type of process is in progress</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MigrationAttachment</fullName>
                </value>
                <value>
                    <fullName>Deletion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>NAMAttachmentConversionStatus</label>
    <nameField>
        <label>AttachmentConversionStatus</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NAMAttachmentConversionStatus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>